feat: header desktop done

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,21 @@
-<header class="h-4 bg-amber-500">header</header>
+<header>
+    <div class="flex items-center max-w-6xl w-full text-justify mx-auto pl-15 pr-15 relative">
+        <a href="index.html" class="flex flex-col items-center gap-1.5 relative z-10 before:absolute before:-z-10 before:bg-blue-100 before:size-66 before:left-1/2 before:top-1/2 before:-translate-1/2 before:rounded-full before:shadow-md">
+            <img src="./public/assets/img/logo.png" alt="logo">
+            <p class="text-sm">healthy ration</p>
+        </a>
+        <nav class="bg-blue-100 shadow-md -ml-5 pl-20 pr-5 py-1.5 flex rounded-4xl mx-5">
+            <a href="#" class="text-sm px-5 py-2.5 hover:text-green-400">Програмы питания</a>
+            <a href="#" class="text-sm px-5 py-2.5 hover:text-green-400">Бизнес-ланчи</a>
+            <a href="#" class="text-sm px-5 py-2.5 hover:text-green-400">Gastro Shop</a>
+            <a href="#" class="text-sm px-5 py-2.5 hover:text-green-400">О нас</a>
+            <a href="#" class="text-sm px-5 py-2.5 hover:text-green-400">Блог</a>
+        </nav>
+        <a href="tel:+380689494919" class="bg-blue-100 shadow-md text-xl font-bold text-green-400 px-6.75 py-2.25 rounded-4xl border-3 border-blue-100 hover:bg-green-400 hover:text-blue-100">+38 (068) 949 - 49 -19</a>
+        <nav class="absolute top-28 left-84 flex gap-3.75">
+            <a href="#" class="bg-green-400 text-blue-300 shadow-md rounded-full flex items-center justify-center uppercase size-8.75 text-[15px]">RU</a>
+            <a href="#" class="bg-blue-100 shadow-md rounded-full flex items-center justify-center uppercase size-8.75 hover:bg-green-400 hover:text-blue-300 text-[15px]">UA</a>
+            <a href="#" class="bg-blue-100 shadow-md rounded-full flex items-center justify-center uppercase size-8.75 hover:bg-green-400 hover:text-blue-300 text-[15px]">EN</a>
+        </nav>
+    </div>
+</header>
