--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,43 @@
 @import "tailwindcss";
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Comfortaa';
     font-style: normal;
     font-weight: 300;
     font-display: swap;
-    src: url(/public/assets/fonts/Montserrat-Light.ttf) format('truetype');
+    src: url(./assets/fonts/Comfortaa-Light.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Comfortaa';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(./assets/fonts/Comfortaa-Regular.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Comfortaa';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(./assets/fonts/Comfortaa-Bold.ttf) format('truetype');
 }
 
 @font-face {
     font-family: 'Montserrat';
     font-style: normal;
-    font-weight: 400;
+    font-weight: 700;
     font-display: swap;
-    src: url(/public/assets/fonts/Montserrat-Regular.ttf) format('truetype');
+    src: url(./assets/fonts/Montserrat-Bold.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(./assets/fonts/Montserrat-Light.ttf) format('truetype');
 }
 
 @font-face {
@@ -21,39 +45,15 @@
     font-style: normal;
     font-weight: 500;
     font-display: swap;
-    src: url(/public/assets/fonts/Montserrat-Medium.ttf) format('truetype');
+    src: url(./assets/fonts/Montserrat-Medium.ttf) format('truetype');
 }
 
 @font-face {
     font-family: 'Montserrat';
     font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src: url(/public/assets/fonts/Montserrat-Bold.ttf) format('truetype');
-}
-
-@font-face {
-    font-family: 'Comfortaa';
-    font-style: normal;
-    font-weight: 300;
-    font-display: swap;
-    src: url(/public/assets/fonts/Comfortaa-Light.ttf) format('truetype');
-}
-
-@font-face {
-    font-family: 'Comfortaa';
-    font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(/public/assets/fonts/Comfortaa-Regular.ttf) format('truetype');
-}
-
-@font-face {
-    font-family: 'Comfortaa';
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src: url(/public/assets/fonts/Comfortaa-Bold.ttf) format('truetype');
+    src: url(./assets/fonts/Montserrat-Regular.ttf) format('truetype');
 }
 
 @theme {
@@ -70,7 +70,69 @@
     --color-grey-950: #020202;
     --container-6xl: calc(73.75rem + 160px);
     --container-2xl: calc(43.125rem + 40px);
-    --shadow-md: 0 0 40px 0 #5656564d;
+    --shadow-md: 0 0 20px 0 #5656564d;
     --shadow-lg: 0 0 30px 0 #5656564d;
-    --shadow-xl: 0 0 20px 0 #5656564d;
+    --shadow-xl: 0 0 40px 0 #5656564d;
+    --text-3xs: 8px;
+    --text-2xs: 10px;
+}
+
+.burger.is-active .burger__icon {
+    top: 7px;
+    transform: rotate(45deg);
+}
+
+.burger.is-active .burger__icon::before {
+    top: 0;
+    transform: rotate(-90deg);
+    left: 0;
+    width: 100%;
+}
+
+.burger.is-active .burger__icon::after {
+    opacity: 0;
+    top: 0;
+    transform: rotate(-90deg);
+}
+
+.burger__icon-wrapper {
+    position: relative;
+    display: inline-block;
+    width: 25px;
+    height: 20px;
+}
+
+.burger__icon,
+.burger__icon::before,
+.burger__icon::after {
+    background-color: var(--color-grey-950);
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    transition: left 0.3s, top 0.3s, transform 0.3s;
+}
+
+.burger__icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+}
+
+.burger__icon::before,
+.burger__icon::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.burger__icon::before {
+    top: 7px;
+    width: 20px;
+    left: 5px;
+}
+
+.burger__icon::after {
+    top: 14px;
 }
