--- a/src/partials/nav-category.html
+++ b/src/partials/nav-category.html
@@ -1,35 +1,41 @@
-<nav class="flex flex-col fixed left-15 top-1/2 gap-12.5 -translate-y-1/2 z-20">
-    <a href="#" class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
+<nav class="flex flex-col fixed left-12.5 top-55 gap-12.5 z-20">
+    <a href="#"
+        class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
         <svg class="size-17.5">
             <use href="#icon-calories"></use>
         </svg>
         <span class="hidden group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Программы 800 - 2400 ккал</span>
     </a>
-    <a href="#" class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
+    <a href="#"
+        class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
         <svg class="size-17.5">
             <use href="#icon-fish"></use>
         </svg>
         <span class="hidden group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Fish</span>
     </a>
-    <a href="#" class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
+    <a href="#"
+        class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
         <svg class="size-17.5">
             <use href="#icon-carrot"></use>
         </svg>
         <span class="hidden group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Vegetable</span>
     </a>
-    <a href="#" class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
+    <a href="#"
+        class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
         <svg class="size-17.5">
             <use href="#icon-bottle"></use>
         </svg>
         <span class="hidden group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Detox</span>
     </a>
-    <a href="#" class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
+    <a href="#"
+        class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
         <svg class="size-17.5">
             <use href="#icon-meat"></use>
         </svg>
         <span class="hidden group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Keto</span>
     </a>
-    <a href="#" class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
+    <a href="#"
+        class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
         <svg class="size-17.5">
             <use href="#icon-table"></use>
         </svg>
