build: baner-1-2 px perfect

--- a/src/partials/banner.html
+++ b/src/partials/banner.html
@@ -1,28 +1,75 @@
 <div class="swiper">
     <div class="swiper-wrapper">
         <div class="swiper-slide">
-            <div class="flex flex-col justify-center h-207.5 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
-                    <div class="max-w-134 -mt-18">
-                        <h1 class="text-40 font-comfortaa font-bold leading-11.25 tracking-wide">Сервис правильного питания.</h1>
-                        <div class="flex flex-col gap-10">
-                            <span class="text-green-400 text-40 inline-block font-comfortaa font-bold leading-11.25 tracking-wide">Худей быстро!</span>
-                    <div class="flex gap-7.75">
-                        <button class="bg-green-400 pt-2.75 pl-16.5 pb-1.75 pr-16.25 font-bold text-26 font-comfortaa rounded-full text-blue-100 tracking-wide shadow-xl border-3 border-green-400 hover:bg-blue-100 hover:text-green-400">Заказать</button>
-                        <div class="flex flex-col">
-                            <span class="font-montserrat text-xl">Пробный день</span>
-                            <span class="text-green-400 font-montserrat font-bold text-35 leading-8.75">-30%</span>
-                        </div>
+            <div
+                class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
+                <div class="max-w-134 -mt-20.75">
+                    <h1 class="text-40 font-comfortaa font-bold leading-11.25 tracking-wide -ml-0.25">Сервис правильного питания.
+                    </h1>
+                    <div class="flex flex-col gap-10">
+                        <span
+                            class="text-green-400 text-40 inline-block font-comfortaa font-bold leading-11.25 tracking-wide">Худей
+                            быстро!</span>
+                        <div class="flex gap-7.75">
+                            <button
+                                class="bg-green-400 pt-2.75 pl-16.5 pb-1.75 pr-16.25 font-bold text-26 font-comfortaa rounded-full text-blue-100 tracking-wide shadow-xl border-3 border-green-400 hover:bg-blue-100 hover:text-green-400">Заказать</button>
+                            <div class="flex flex-col">
+                                <span class="font-montserrat text-xl">Пробный день</span>
+                                <span class="text-green-400 font-montserrat font-bold text-35 leading-8.75">-30%</span>
+                            </div>
                         </div>
                     </div>
-                    </div>
-                    <img class="border-38 border-blue-100 rounded-full shadow-lg size-175 absolute top-14.5 -right-58" src="./assets/img/banner-1.png" alt="banner-1">
+                </div>
+                <img class="border-38 border-blue-100 rounded-full shadow-lg size-175 absolute top-14.5 -right-58"
+                    src="./assets/img/banner-1.png" alt="banner-1">
             </div>
+        </div>
+        <div class="swiper-slide">
+            <div
+                class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
+                <div class="max-w-145 -mt-5.75">
+                    <h2 class="text-32 font-bold font-comfortaa tracking-wide leading-8.75 -ml-0.25"><span class="text-green-400 text-32 font-bold font-comfortaa tracking-wide leading-10.25">Доверьтесь
+                        профессионалам.</span> Я Кобылинский Кирилл - основатель.</h2>
+                    <p class="font-montserrat text-xl max-w-135.5 mt-3.75 mb-10.5 ml-0.25"><span
+                            class="font-medium text-green-400">Мастер спорта</span> Украины по тяжелой атлетике. <span
+                            class="font-medium text-green-400">Высшее образование</span> института физкультуры(НуфвсУ).
+                    </p>
+                    <div class="flex gap-7.5">
+                        <button
+                            class="font-bold font-comfortaa text-2xl border-2 pt-2.75 pl-6.25 pb-2.5 pr-7.5 border-green-400 rounded-full text-blue-100  bg-green-400 tracking-wide hover:bg-blue-100 hover:text-green-400">Мой
+                            инстаграм</button>
+                        <span class="font-montserrat text-xl max-w-47 leading-6.25 pt-1.25">Всегда открыт для клиентов</span>
+                    </div>
+                </div>
+            </div>
+            <img class="border-38 border-blue-100 rounded-full shadow-lg size-175 absolute top-14.5 right-14.25"
+                src="./assets/img/banner-2.png" alt="banner-2">
         </div>
         <div class="swiper-slide">side-2</div>
         <div class="swiper-slide">side-2</div>
         <div class="swiper-slide">side-2</div>
+        <div class="swiper-slide">side-2</div>
+        <div class="swiper-slide">side-2</div>
+        <div class="swiper-slide">side-2</div>
+        <div class="swiper-slide">side-2</div>
     </div>
-    <div class="swiper-pagination"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
+    <div class="swiper-navigation w-62.5 h-6 flex items-center justify-center absolute bottom-0 left-1/2 -translate-1/2 z-30">
+        <div class="swiper-pagination">
+            <svg width="14" height="14" viewBox="0 0 14 14" style="transform:rotate(0deg)">
+                <circle r="5" cx="50%" cy="50%" fill="transparent" stroke="#ff0000" stroke-width="2"></circle>
+                <circle r="5" cx="50%" cy="50%" stroke="#000000" stroke-width="2" stroke-dashoffset="20px"
+                    fill="transparent" stroke-dasharray="43.96px"></circle>
+            </svg>
+        </div>
+        <div class="swiper-button-prev">
+            <svg>
+                <use href="#icon-arrow-left"></use>
+            </svg>
+        </div>
+        <div class="swiper-button-next">
+            <svg>
+                <use href="#icon-arrow-right"></use>
+            </svg>
+        </div>
+    </div>
 </div>
