--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,15 +2,15 @@
     <div
         class="flex items-center max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 pt-3.75 md:pt-1.75 xl:pt-4 relative before:size-323 before:bg-green-400 before:rounded-full before:absolute before:-right-159 before:-top-24.5  before:-z-10 before:shadow-xl">
         <a href="index.html"
-            class="mr-auto md:mr-0 flex flex-col items-center gap-1.5 relative z-10 md:ml-8 xl:ml-0 before:absolute before:-z-10 before:bg-blue-100 before:rounded-full before:size-34.5 md:before:size-37.5 xl:before:size-50 2xl:before:size-66 before:left-1/2 before:top-1/2 before:-translate-1/2 before:shadow-xl">
+            class="mr-auto md:mr-0 flex flex-col items-center gap-1.75 relative z-10 md:ml-8 xl:ml-0 before:absolute before:-z-10 before:bg-blue-100 before:rounded-full before:size-34.5 md:before:size-37.5 xl:before:size-50 2xl:before:size-66 before:left-1/2 before:top-1/2 before:-translate-1/2 before:shadow-xl">
             <img src="./assets/img/logo.png" alt="logo" class="w-26.5 h-13 xl:min-w-46.5 xl:h-23 mt-1.5">
-            <p class="text-3xs xl:text-sm">healthy ration</p>
+            <p class="text-3xs xl:text-sm tracking-wide">healthy ration</p>
         </a>
         <div id="mobile-container" class="hidden absolute top-0 left-0 bg-blue-100 md:bg-transparent z-10 md:z-0 md:static md:flex items-center rounded-br-4xl rounded-bl-4xl pt-10 px-5 pb-5 md:p-0 w-full">
             <nav class="flex flex-col gap-5 md:gap-0 md:flex-row bg-blue-100 md:shadow-xl md:rounded-4xl md:py-1.5 mb-8 md:mb-0 md:-ml-2.5 xl:-ml-5 md:pl-14.5 xl:pl-7 2xl:pl-21 md:pr-5 mr-2.5 xl:mr-5">
                 <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:px-5 md:py-1 xl:py-2.5 hover:text-green-400">Програмы питания</a>
                 <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:px-5 md:py-1 xl:py-2.5 hover:text-green-400">Бизнес-ланчи</a>
-                <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:px-5 md:py-1 xl:py-2.5 hover:text-green-400">Gastro Shop</a>
+                <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:px-5 md:py-1 xl:py-2.5 tracking-wide text-green-400">Gastro Shop</a>
                 <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:px-5 md:py-1 xl:py-2.5 hover:text-green-400">О нас</a>
                 <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:px-5 md:py-1 xl:py-2.5 hover:text-green-400">Блог</a>
             </nav>
