--- a/src/style.css
+++ b/src/style.css
@@ -76,66 +76,14 @@
     --text-3xs: 8px;
     --text-2xs: 10px;
     --text-26: 26px;
+    --text-32: 32px;
     --text-35: 35px;
     --text-40: 40px;
 }
 
-.burger.is-active .burger__icon {
-    top: 7px;
-    transform: rotate(45deg);
-}
-
-.burger.is-active .burger__icon::before {
-    top: 0;
-    transform: rotate(-90deg);
-    left: 0;
-    width: 100%;
-}
-
-.burger.is-active .burger__icon::after {
+/* .swiper .swiper-pagination-bullet-active-prev-prev, 
+.swiper .swiper-pagination-bullet-active-prev,
+.swiper .swiper-pagination-bullet-active-next-next,
+.swiper .swiper-pagination-bullet-active-next {
     opacity: 0;
-    top: 0;
-    transform: rotate(-90deg);
-}
-
-.burger__icon-wrapper {
-    position: relative;
-    display: inline-block;
-    width: 25px;
-    height: 20px;
-}
-
-.burger__icon,
-.burger__icon::before,
-.burger__icon::after {
-    background-color: var(--color-grey-950);
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    transition: left 0.3s, top 0.3s, transform 0.3s;
-}
-
-.burger__icon {
-    position: absolute;
-    top: 0;
-    left: 0;
-    cursor: pointer;
-}
-
-.burger__icon::before,
-.burger__icon::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.burger__icon::before {
-    top: 7px;
-    width: 20px;
-    left: 5px;
-}
-
-.burger__icon::after {
-    top: 14px;
-}
+} */
