build: baner-3 px perfect

--- a/src/partials/banner.html
+++ b/src/partials/banner.html
@@ -3,7 +3,7 @@
         <div class="swiper-slide">
             <div
                 class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
-                <div class="max-w-134 -mt-20.75">
+                <div class="max-w-134 -mt-21">
                     <h1 class="text-40 font-comfortaa font-bold leading-11.25 tracking-wide -ml-0.25">Сервис правильного питания.
                     </h1>
                     <div class="flex flex-col gap-10">
@@ -12,7 +12,7 @@
                             быстро!</span>
                         <div class="flex gap-7.75">
                             <button
-                                class="bg-green-400 pt-2.75 pl-16.5 pb-1.75 pr-16.25 font-bold text-26 font-comfortaa rounded-full text-blue-100 tracking-wide shadow-xl border-3 border-green-400 hover:bg-blue-100 hover:text-green-400">Заказать</button>
+                                class="bg-green-400 pt-2.75 pl-17.25 pb-1.75 pr-16.25 font-bold text-26 font-comfortaa rounded-full text-blue-100 tracking-wide shadow-xl border-2 border-green-400 hover:bg-blue-100 hover:text-green-400">Заказать</button>
                             <div class="flex flex-col">
                                 <span class="font-montserrat text-xl">Пробный день</span>
                                 <span class="text-green-400 font-montserrat font-bold text-35 leading-8.75">-30%</span>
@@ -36,7 +36,7 @@
                     </p>
                     <div class="flex gap-7.5">
                         <button
-                            class="font-bold font-comfortaa text-2xl border-2 pt-2.75 pl-6.25 pb-2.5 pr-7.5 border-green-400 rounded-full text-blue-100  bg-green-400 tracking-wide hover:bg-blue-100 hover:text-green-400">Мой
+                            class="font-bold font-comfortaa text-2xl border-2 pt-2.75 pl-6.25 pb-2.5 pr-7.5 shadow-xl border-green-400 rounded-full text-blue-100  bg-green-400 tracking-wide hover:bg-blue-100 hover:text-green-400">Мой
                             инстаграм</button>
                         <span class="font-montserrat text-xl max-w-47 leading-6.25 pt-1.25">Всегда открыт для клиентов</span>
                     </div>
@@ -45,7 +45,22 @@
             <img class="border-38 border-blue-100 rounded-full shadow-lg size-175 absolute top-14.5 right-14.25"
                 src="./assets/img/banner-2.png" alt="banner-2">
         </div>
-        <div class="swiper-slide">side-2</div>
+        <div class="swiper-slide">
+             <div class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
+                <div class="max-w-149 -mt-8">
+                    <h1 class="font-comfortaa font-bold text-40 tracking-wide leading-11 -ml-0.25">Кето питание - <span class="text-green-400">вкусное и экстремальное</span> быстрое похудение</h1>
+                    <p class="font-montserrat text-xl mt-4 ml-0.5">4 приема пищи.</p>
+                    <div class="flex mt-10.5 gap-7.75 ml-0.5">
+                        <button class="font-comfortaa text-26 font-bold tracking-wide border-2 h-15 border-green-400 bg-green-400 hover:bg-blue-100 hover:text-green-400 shadow-xl rounded-full pt-2.5 pl-16 pb-2.5 pr-17">Заказать</button>
+                        <div class="flex flex-col h-15.5 mt-2">
+                            <span class="font-montserrat text-xl leading-2">Пробный день</span>
+                            <span class="font-bold font-montserrat text-35 text-green-400">от 490грн</span>
+                        </div>
+                    </div>
+                </div>
+                <img class="size-175 border-38 border-blue-100 rounded-full shadow-lg absolute top-14.25 -right-58.25" src="./assets/img/banner-3.png" alt="banner-3">
+            </div>
+        </div>
         <div class="swiper-slide">side-2</div>
         <div class="swiper-slide">side-2</div>
         <div class="swiper-slide">side-2</div>
