banner-4 px perfect

--- a/src/partials/banner.html
+++ b/src/partials/banner.html
@@ -1,6 +1,6 @@
 <div class="swiper">
     <div class="swiper-wrapper">
-        <div class="swiper-slide">
+         <div class="swiper-slide">
             <div
                 class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
                 <div class="max-w-134 -mt-21">
@@ -48,7 +48,7 @@
         <div class="swiper-slide">
              <div class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
                 <div class="max-w-149 -mt-8">
-                    <h1 class="font-comfortaa font-bold text-40 tracking-wide leading-11 -ml-0.25">Кето питание - <span class="text-green-400">вкусное и экстремальное</span> быстрое похудение</h1>
+                    <h2 class="font-comfortaa font-bold text-40 tracking-wide leading-11 -ml-0.25">Кето питание - <span class="text-green-400">вкусное и экстремальное</span> быстрое похудение</h2>
                     <p class="font-montserrat text-xl mt-4 ml-0.5">4 приема пищи.</p>
                     <div class="flex mt-10.5 gap-7.75 ml-0.5">
                         <button class="font-comfortaa text-26 font-bold tracking-wide border-2 h-15 border-green-400 bg-green-400 hover:bg-blue-100 hover:text-green-400 shadow-xl rounded-full pt-2.5 pl-16 pb-2.5 pr-17">Заказать</button>
@@ -61,12 +61,22 @@
                 <img class="size-175 border-38 border-blue-100 rounded-full shadow-lg absolute top-14.25 -right-58.25" src="./assets/img/banner-3.png" alt="banner-3">
             </div>
         </div>
-        <div class="swiper-slide">side-2</div>
-        <div class="swiper-slide">side-2</div>
-        <div class="swiper-slide">side-2</div>
-        <div class="swiper-slide">side-2</div>
-        <div class="swiper-slide">side-2</div>
-        <div class="swiper-slide">side-2</div>
+        <div class="swiper-slide">
+             <div class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
+                <div class="max-w-133.75 -mt-11">
+                    <h2 class="font-comfortaa font-bold text-40 tracking-wide leading-11.5 -ml-0.25">Detox программа –  <span class="text-green-400">вкусное очищение</span> организма</h2>
+                    <p class="text-xl font-montserrat mt-3.25 ml-0.25">8 бутылочек <span class="text-green-400 font-medium">натуральных</span> смузи и фрешей.</p>
+                    <div class="flex gap-7.5 mt-10.25">
+                        <button class="font-bold h-15 font-comfortaa text-26 tracking-wide border-2 shadow-xl border-green-400 bg-green-400 hover:bg-blue-100 hover:text-green-400 rounded-full pt-2.75 pl-16.5 pb-3 pr-17">Заказать</button>
+                        <div class="flex flex-col">
+                            <span class="font-montserrat text-xl">Пробный день всего:</span>
+                            <span class="font-montserrat font-bold text-35 text-green-400 leading-8">427 грн</span>
+                        </div>
+                    </div>
+                    <img class="absolute size-175 border-38 border-blue-100 rounded-full shadow-xl top-14.25 -right-58.25" src="./assets/img/banner-4.png" alt="baner">
+                </div>
+            </div>
+        </div>
     </div>
     <div class="swiper-navigation w-62.5 h-6 flex items-center justify-center absolute bottom-0 left-1/2 -translate-1/2 z-30">
         <div class="swiper-pagination">
