build: desktop px perfect

--- a/src/partials/banner.html
+++ b/src/partials/banner.html
@@ -1,89 +1,104 @@
 <div class="swiper">
     <div class="swiper-wrapper">
+        <div class="swiper-slide">
+            <div
+                class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
+                <div class="md:max-w-55 xl:max-w-134 md:-mt-100 md:ml-22.25 xl:ml-0 xl:-mt-20.25">
+                    <h1 class="md:text-lg xl:text-40 font-comfortaa font-bold md:leading-5 xl:leading-11.5 tracking-wide md:ml-0.25 xl:-ml-0.25">Сервис правильного
+                        питания.
+                        <span
+                            class="text-green-400 inline-block md:leading-5 xl:leading-11.25 tracking-wide">Худей
+                            быстро!</span>
+                    </h1>
+                    <div class="flex md:flex-col xl:flex-row md:gap-2.5 xl:gap-7.75 md:mt-3.75 xl:mt-10 md:max-w-37.5 xl:max-w-133 md:ml-0.25">
+                        <button
+                            class="bg-green-400 md:pt-1 xl:pt-2.75 xl:pl-17.25 md:pb-0.5 xl:pb-1.75 xl:pr-16.25 font-bold md:text-base xl:text-26 font-comfortaa rounded-full text-blue-100 tracking-wide shadow-xl border-2 border-green-400 hover:bg-blue-100 hover:text-green-400">Заказать</button>
+                        <div class="flex flex-col">
+                            <span class="font-montserrat md:text-xs xl:text-xl">Пробный день</span>
+                            <span class="text-green-400 font-montserrat font-bold md:text-lg xl:text-35 md:leading-6 xl:leading-8.75">-30%</span>
+                        </div>
+                    </div>
+                </div>
+                <img class="md:border-17 xl:border-38 border-blue-100 rounded-full shadow-lg md:size-77.5 xl:size-175 absolute md:top-11.5 xl:top-14.5 md:-right-2.75 xl:-right-58"
+                    src="./assets/img/banner-1.png" alt="banner-1">
+            </div>
+        </div> 
          <div class="swiper-slide">
             <div
                 class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
-                <div class="max-w-134 -mt-21">
-                    <h1 class="text-40 font-comfortaa font-bold leading-11.25 tracking-wide -ml-0.25">Сервис правильного питания.
-                    </h1>
-                    <div class="flex flex-col gap-10">
-                        <span
-                            class="text-green-400 text-40 inline-block font-comfortaa font-bold leading-11.25 tracking-wide">Худей
-                            быстро!</span>
-                        <div class="flex gap-7.75">
-                            <button
-                                class="bg-green-400 pt-2.75 pl-17.25 pb-1.75 pr-16.25 font-bold text-26 font-comfortaa rounded-full text-blue-100 tracking-wide shadow-xl border-2 border-green-400 hover:bg-blue-100 hover:text-green-400">Заказать</button>
-                            <div class="flex flex-col">
-                                <span class="font-montserrat text-xl">Пробный день</span>
-                                <span class="text-green-400 font-montserrat font-bold text-35 leading-8.75">-30%</span>
-                            </div>
+                <div class="md:max-w-60 xl:max-w-143 md:ml-22.5 xl:ml-0 md:-mt-108.25 xl:-mt-5">
+                    <h2 class="md:text-lg xl:text-32 font-bold font-comfortaa tracking-wide md:leading-5.5 xl:leading-8.75 -ml-0.25"><span
+                            class="text-green-400 xl:leading-10.25">Доверьтесь
+                            профессионалам.</span> Я Кобылинский Кирилл - основатель.</h2>
+                    <p class="font-montserrat md:text-xs xl:text-xl md:mt-2.5 xl:mt-3.75 md:mb-6.25 xl:mb-10.5 md:ml-0.25 xl:ml-0.5"><span
+                            class="font-medium text-green-400">Мастер спорта</span> Украины по тяжелой атлетике. <span
+                            class="font-medium text-green-400">Высшее образование</span> института физкультуры(НуфвсУ).
+                    </p>
+                    <div class="flex md:flex-col xl:flex-row xl:gap-7.5 md:max-w-50 xl:max-w-133">
+                        <button
+                            class="font-bold font-comfortaa md:text-base xl:text-2xl border-2 md:pt-1.5 xl:pt-2.75 xl:pl-6.25 md:pt-0.75 xl:pb-2.5 xl:pr-7.5 shadow-xl border-green-400 rounded-full text-blue-100  bg-green-400 tracking-wide hover:bg-blue-100 hover:text-green-400 ml-0.25">Мой
+                            инстаграм</button>
+                        <span class="font-montserrat md:text-xs xl:text-xl max-w-47 leading-6.25 pt-1.25">Всегда открыт для
+                            клиентов</span>
+                    </div>
+                </div>
+            </div>
+            <img class="md:border-17 xl:border-38 border-blue-100 rounded-full shadow-lg md:size-77.5 xl:size-175 absolute md:top-11.5 xl:top-14.5 md:right-2 xl:right-14.25"
+                src="./assets/img/banner-2.png" alt="banner-2">
+        </div> 
+        <div class="swiper-slide">
+            <div
+                class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
+                <div class="md:max-w-65 xl:max-w-149 md:-mt-116.25 md:ml-22.75 xl:ml-0 xl:-mt-8.5">
+                    <h2 class="font-comfortaa font-bold md:text-lg xl:text-40 tracking-wide md:leading-5 xl:leading-11 -ml-0.25">Кето питание - <span
+                            class="text-green-400">вкусное и экстремальное</span> быстрое похудение</h2>
+                    <p class="font-montserrat md:text-xs xl:text-xl mt-4 ml-0.5">4 приема пищи.</p>
+                    <div class="flex md:flex-col xl:flex-row md:mt-6 xl:mt-10.5 md:gap-3.5 xl:gap-7.75 md:-ml-0.25 xl:ml-0.5 md:max-w-37.5 xl:max-w-133">
+                        <button
+                            class="font-comfortaa md:text-base xl:text-26 font-bold tracking-wide border-2 xl:h-15 border-green-400 bg-green-400 hover:bg-blue-100 hover:text-green-400 shadow-xl rounded-full md:pt-1.25 xl:pt-2.5 xl:pl-16 md:pb-0.5 xl:pb-2.5 xl:pr-17">Заказать</button>
+                        <div class="flex flex-col">
+                            <span class="font-montserrat md:text-xs xl:text-xl md:leading-2.5 xl:leading-6">Пробный день</span>
+                            <span class="font-bold font-montserrat md:text-lg xl:text-35 text-green-400 md:leading-7 xl:leading-10">от 490грн</span>
                         </div>
                     </div>
                 </div>
-                <img class="border-38 border-blue-100 rounded-full shadow-lg size-175 absolute top-14.5 -right-58"
-                    src="./assets/img/banner-1.png" alt="banner-1">
+                <img class="md:size-77.5 xl:size-175 md:border-17 xl:border-38 border-blue-100 rounded-full shadow-lg absolute md:top-11.5 xl:top-14.25 md:-right-3 xl:-right-58.25"
+                    src="./assets/img/banner-3.png" alt="banner-3">
             </div>
         </div>
         <div class="swiper-slide">
             <div
                 class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
-                <div class="max-w-145 -mt-5.75">
-                    <h2 class="text-32 font-bold font-comfortaa tracking-wide leading-8.75 -ml-0.25"><span class="text-green-400 text-32 font-bold font-comfortaa tracking-wide leading-10.25">Доверьтесь
-                        профессионалам.</span> Я Кобылинский Кирилл - основатель.</h2>
-                    <p class="font-montserrat text-xl max-w-135.5 mt-3.75 mb-10.5 ml-0.25"><span
-                            class="font-medium text-green-400">Мастер спорта</span> Украины по тяжелой атлетике. <span
-                            class="font-medium text-green-400">Высшее образование</span> института физкультуры(НуфвсУ).
-                    </p>
-                    <div class="flex gap-7.5">
+                <div class="md:max-w-48.75 xl:max-w-133.75 md:-mt-113.25 md:ml-22.25 xl:ml-0 xl:-mt-9.5">
+                    <h2
+                        class="font-comfortaa font-bold md:text-lg xl:text-40 tracking-wide md:leading-5 xl:leading-11.5 md:ml-0.25 xl:-ml-0.25">
+                        Detox программа – <span class="text-green-400">вкусное очищение</span> организма</h2>
+                    <p class="md:text-xs xl:text-xl font-montserrat md:mt-2.5 xl:mt-3.25 md:ml-1 xl:ml-0.25">8 бутылочек
+                        <span class="text-green-400 font-medium">натуральных</span> смузи и фрешей.</p>
+                    <div
+                        class="flex md:flex-col xl:flex-row md:gap-3 xl:gap-8 md:mt-6.5 xl:mt-10.25 md:max-w-37.5 xl:max-w-133">
                         <button
-                            class="font-bold font-comfortaa text-2xl border-2 pt-2.75 pl-6.25 pb-2.5 pr-7.5 shadow-xl border-green-400 rounded-full text-blue-100  bg-green-400 tracking-wide hover:bg-blue-100 hover:text-green-400">Мой
-                            инстаграм</button>
-                        <span class="font-montserrat text-xl max-w-47 leading-6.25 pt-1.25">Всегда открыт для клиентов</span>
-                    </div>
-                </div>
-            </div>
-            <img class="border-38 border-blue-100 rounded-full shadow-lg size-175 absolute top-14.5 right-14.25"
-                src="./assets/img/banner-2.png" alt="banner-2">
-        </div>
-        <div class="swiper-slide">
-             <div class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
-                <div class="max-w-149 -mt-8">
-                    <h2 class="font-comfortaa font-bold text-40 tracking-wide leading-11 -ml-0.25">Кето питание - <span class="text-green-400">вкусное и экстремальное</span> быстрое похудение</h2>
-                    <p class="font-montserrat text-xl mt-4 ml-0.5">4 приема пищи.</p>
-                    <div class="flex mt-10.5 gap-7.75 ml-0.5">
-                        <button class="font-comfortaa text-26 font-bold tracking-wide border-2 h-15 border-green-400 bg-green-400 hover:bg-blue-100 hover:text-green-400 shadow-xl rounded-full pt-2.5 pl-16 pb-2.5 pr-17">Заказать</button>
-                        <div class="flex flex-col h-15.5 mt-2">
-                            <span class="font-montserrat text-xl leading-2">Пробный день</span>
-                            <span class="font-bold font-montserrat text-35 text-green-400">от 490грн</span>
-                        </div>
-                    </div>
-                </div>
-                <img class="size-175 border-38 border-blue-100 rounded-full shadow-lg absolute top-14.25 -right-58.25" src="./assets/img/banner-3.png" alt="banner-3">
-            </div>
-        </div>
-        <div class="swiper-slide">
-             <div class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
-                <div class="max-w-133.75 -mt-11">
-                    <h2 class="font-comfortaa font-bold text-40 tracking-wide leading-11.5 -ml-0.25">Detox программа –  <span class="text-green-400">вкусное очищение</span> организма</h2>
-                    <p class="text-xl font-montserrat mt-3.25 ml-0.25">8 бутылочек <span class="text-green-400 font-medium">натуральных</span> смузи и фрешей.</p>
-                    <div class="flex gap-7.5 mt-10.25">
-                        <button class="font-bold h-15 font-comfortaa text-26 tracking-wide border-2 shadow-xl border-green-400 bg-green-400 hover:bg-blue-100 hover:text-green-400 rounded-full pt-2.75 pl-16.5 pb-3 pr-17">Заказать</button>
+                            class="font-bold font-comfortaa md:text-base xl:text-26 xl:tracking-wide border-2 shadow-xl border-green-400 bg-green-400 hover:bg-blue-100 hover:text-green-400 rounded-full md:pt-1 md:pl-0.25 md:pr-1 md:pb-0.25 xl:pt-2.75 xl:pl-16.5 xl:pb-3 xl:pr-17">Заказать</button>
                         <div class="flex flex-col">
-                            <span class="font-montserrat text-xl">Пробный день всего:</span>
-                            <span class="font-montserrat font-bold text-35 text-green-400 leading-8">427 грн</span>
+                            <span class="font-montserrat md:text-xs xl:text-xl">Пробный день:</span>
+                            <span
+                                class="font-montserrat font-bold md:text-lg xl:text-35 text-green-400 md:leading-5.75 xl:leading-8 md:ml-0.25 xl:ml-0">427
+                                грн</span>
                         </div>
                     </div>
-                    <img class="absolute size-175 border-38 border-blue-100 rounded-full shadow-xl top-14.25 -right-58.25" src="./assets/img/banner-4.png" alt="baner">
                 </div>
+                <img class="absolute md:size-77.5 xl:size-175 md:border-17 xl:border-38 border-blue-100 rounded-full shadow-xl md:top-11.5 xl:top-14.25 md:-right-3 xl:-right-58.25"
+                    src="./assets/img/banner-4.png" alt="baner">
             </div>
         </div>
     </div>
-    <div class="swiper-navigation w-62.5 h-6 flex items-center justify-center absolute bottom-0 left-1/2 -translate-1/2 z-30">
+    <div
+        class="swiper-navigation md:w-45 xl:w-45 h-6 flex items-center justify-center absolute md:top-84.25 xl:top-204.5 xl:left-1/2 md:left-29.75 xl:-translate-1/2 z-30">
         <div class="swiper-pagination">
             <svg width="14" height="14" viewBox="0 0 14 14" style="transform:rotate(0deg)">
                 <circle r="5" cx="50%" cy="50%" fill="transparent" stroke="#ff0000" stroke-width="2"></circle>
-                <circle r="5" cx="50%" cy="50%" stroke="#000000" stroke-width="2" stroke-dashoffset="20px"
-                    fill="transparent" stroke-dasharray="43.96px"></circle>
+                <circle r="5" cx="50%" cy="50%" stroke="#000000" stroke-width="2" stroke-dashoffset="1.25rem"
+                    fill="transparent" stroke-dasharray="2.7475rem"></circle>
             </svg>
         </div>
         <div class="swiper-button-prev">
