--- a/src/partials/nav-category.html
+++ b/src/partials/nav-category.html
@@ -1,44 +1,44 @@
-<nav class="flex flex-col fixed left-12.5 top-55 gap-12.5 z-20">
-    <a href="#"
-        class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
-        <svg class="size-17.5">
+<nav class="flex flex-col fixed md:left-10 xl:left-12.5 md:top-36.25 xl:top-55 md:gap-3 xl:gap-12.5 z-20">
+    <a href="#" 
+        class="flex items-center w-10 xl:w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
+        <svg class="md:size-10 xl:size-17.5">
             <use href="#icon-calories"></use>
         </svg>
-        <span class="hidden group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Программы 800 - 2400 ккал</span>
+        <span class="hidden xl:group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Программы 800 - 2400 ккал</span>
     </a>
     <a href="#"
-        class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
-        <svg class="size-17.5">
+        class="flex items-center w-10 xl:w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
+        <svg class="md:size-10 xl:size-17.5">
             <use href="#icon-fish"></use>
         </svg>
-        <span class="hidden group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Fish</span>
+        <span class="hidden xl:group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Fish</span>
     </a>
     <a href="#"
-        class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
-        <svg class="size-17.5">
+        class="flex items-center w-10 xl:w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
+        <svg class="md:size-10 xl:size-17.5">
             <use href="#icon-carrot"></use>
         </svg>
-        <span class="hidden group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Vegetable</span>
+        <span class="hidden xl:group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Vegetable</span>
     </a>
     <a href="#"
-        class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
-        <svg class="size-17.5">
+        class="flex items-center w-10 xl:w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
+        <svg class="md:size-10 xl:size-17.5">
             <use href="#icon-bottle"></use>
         </svg>
-        <span class="hidden group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Detox</span>
+        <span class="hidden xl:group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Detox</span>
     </a>
     <a href="#"
-        class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
-        <svg class="size-17.5">
+        class="flex items-center w-10 xl:w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
+        <svg class="md:size-10 xl:size-17.5">
             <use href="#icon-meat"></use>
         </svg>
-        <span class="hidden group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Keto</span>
+        <span class="hidden xl:group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Keto</span>
     </a>
     <a href="#"
-        class="flex items-center w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
-        <svg class="size-17.5">
+        class="flex items-center w-10 xl:w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
+        <svg class="md:size-10 xl:size-17.5">
             <use href="#icon-table"></use>
         </svg>
-        <span class="hidden group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Top 5</span>
+        <span class="hidden xl:group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Top 5</span>
     </a>
 </nav>
