--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,27 +1,28 @@
 <header>
     <div
-        class="flex items-center max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 pt-3.75 md:pt-1.75 xl:pt-4 relative before:size-323 before:bg-green-400 before:rounded-full before:absolute before:-right-159 before:-top-24.5  before:-z-10 before:shadow-xl">
+        class="flex items-center max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-8 pr-5 xl:pl-19.5 xl:pr-20 pt-3.75 md:pt-1.75 xl:pt-4 relative before:size-129.75 before:-top-68 before:-right-47 md:before:size-191.25 xl:before:size-323 before:bg-green-400 before:rounded-full before:absolute md:before:-right-103 md:before:-top-22.75 xl:before:-right-159 xl:before:-top-24.5  before:-z-10 before:shadow-xl">
         <a href="index.html"
-            class="mr-auto md:mr-0 flex flex-col items-center gap-1.75 relative z-10 md:ml-8 xl:ml-0 before:absolute before:-z-10 before:bg-blue-100 before:rounded-full before:size-34.5 md:before:size-37.5 xl:before:size-50 2xl:before:size-66 before:left-1/2 before:top-1/2 before:-translate-1/2 before:shadow-xl">
-            <img src="./assets/img/logo.png" alt="logo" class="w-26.5 h-13 xl:min-w-46.5 xl:h-23 mt-1.5">
+            class="mr-auto md:mr-0 flex flex-col items-center gap-1.25 relative z-10 md:ml-1.5 xl:ml-0 before:absolute before:-z-10 before:bg-blue-100 before:rounded-full before:size-34.5 md:before:size-37.5 xl:before:size-50 2xl:before:size-66 before:left-1/2 before:top-1/2 before:-translate-1/2 before:shadow-xl">
+            <img src="./assets/img/logo.png" alt="logo" class="w-26.5 md:w-34.5 h-13 xl:min-w-46.5 xl:h-23 mt-1.5">
             <p class="text-3xs xl:text-sm tracking-wide">healthy ration</p>
         </a>
         <div id="mobile-container" class="hidden absolute top-0 left-0 bg-blue-100 md:bg-transparent z-10 md:z-0 md:static md:flex items-center rounded-br-4xl rounded-bl-4xl pt-10 px-5 pb-5 md:p-0 w-full">
-            <nav class="flex flex-col gap-5 md:gap-0 md:flex-row bg-blue-100 md:shadow-xl md:rounded-4xl md:py-1.5 mb-8 md:mb-0 md:-ml-2.5 xl:-ml-5 md:pl-14.5 xl:pl-7 2xl:pl-21 md:pr-5 mr-2.5 xl:mr-5">
+            <nav class="flex flex-col gap-5 md:gap-0 md:flex-row bg-blue-100 md:shadow-xl md:rounded-4xl md:py-1.5 mb-8 md:mb-0 md:-ml-3 xl:-ml-5 md:pl-11.5 xl:pl-7 2xl:pl-21 md:pr-5 mr-2.5 xl:mr-5">
                 <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:px-5 md:py-1 xl:py-2.5 hover:text-green-400">Програмы питания</a>
                 <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:px-5 md:py-1 xl:py-2.5 hover:text-green-400">Бизнес-ланчи</a>
-                <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:px-5 md:py-1 xl:py-2.5 tracking-wide text-green-400">Gastro Shop</a>
+                <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:px-5 md:py-1 xl:py-2.5 xl: tracking-wide text-green-400">Gastro Shop</a>
                 <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:px-5 md:py-1 xl:py-2.5 hover:text-green-400">О нас</a>
                 <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:px-5 md:py-1 xl:py-2.5 hover:text-green-400">Блог</a>
             </nav>
-            <a href="tel:+380689494919" class="@max-md:w-full block text-center md:inline-block hover:border-green-100 hover:text-green-400 md:hover:text-blue-100 hover:bg-blue-100 md:hover:bg-green-400 text-blue-100 md:text-green-400 border-3 border-green-400 md:border-blue-100 rounded-4xl ml-auto px-9.5 py-1.5 md:px-1.5 md:py-1.25 xl:px-6.5 xl:py-2.25 font-bold text-lg md:text-xs xl:text-xl bg-green-400 md:bg-blue-100 shadow-xl">+38 (068) 949 - 49 -19</a>
-            <nav class="absolute top-25 right-8 md:top-17.5 md:left-46.75 xl:top-31 xl:left-85.75 flex flex-col md:flex-row gap-3 xl:gap-3.75">
-                <a href="#" class="bg-green-400 text-blue-300 shadow-xl size-10 md:size-6 xl:size-8.75 rounded-full flex items-center justify-center md:text-2xs xl:text-base uppercase hover:bg-green-400 hover:text-blue-300">ru</a>
-                <a href="#" class="bg-blue-100 shadow-xl size-10 md:size-6 xl:size-8.75 rounded-full flex items-center justify-center md:text-2xs xl:text-base uppercase hover:bg-green-400 hover:text-blue-300">ua</a>
-                <a href="#" class="bg-blue-100 shadow-xl size-10 md:size-6 xl:size-8.75 rounded-full flex items-center justify-center md:text-2xs xl:text-base uppercase hover:bg-green-400 hover:text-blue-300">en</a>
+            <a href="tel:+380689494919" class="@max-md:w-full block text-center md:inline-block hover:border-green-100 hover:text-green-400 md:hover:text-blue-100 hover:bg-blue-100 md:hover:bg-green-400 text-blue-100 md:text-green-400 border-3 border-green-400 md:border-blue-100 rounded-4xl ml-auto px-9.5 py-1.5 md:px-4 md:py-1.5 xl:px-6.5 xl:py-2.25 font-bold text-lg md:text-2xs xl:text-xl bg-green-400 md:bg-blue-100 shadow-xl font-montserrat md:mr-0.5 xl:mr-0">+38 (068) 949 - 49 -19</a>
+            <nav class="absolute top-25 right-8 md:top-17.75 md:left-47.5 xl:top-31 xl:left-85.75 flex flex-col md:flex-row gap-2.5 xl:gap-3.75">
+                <a href="#" class="bg-green-400 text-blue-300 shadow-xl size-10 md:size-5 xl:size-8.75 rounded-full flex items-center justify-center md:text-2xs xl:text-base uppercase hover:bg-green-400 hover:text-blue-300">ru</a>
+                <a href="#" class="bg-blue-100 shadow-xl size-10 md:size-5 xl:size-8.75 rounded-full flex items-center justify-center md:text-2xs xl:text-base uppercase hover:bg-green-400 hover:text-blue-300">ua</a>
+                <a href="#" class="bg-blue-100 shadow-xl size-10 md:size-5 xl:size-8.75 rounded-full flex items-center justify-center md:text-2xs xl:text-base uppercase hover:bg-green-400 hover:text-blue-300">en</a>
             </nav>
         </div>
-        <a href="tel:+380689494919" class="md:hidden ml-6.5 text-green-400 hover:text-green-600 size-16 bg-blue-100 shadow-xl rounded-full flex justify-center items-center">
+        <div class="bg-blue-100 flex h-8.5 w-full justify-end items-center rounded-full md:hidden">
+            <a href="tel:+380689494919" class="md:hidden ml-6.5 text-green-400 hover:text-green-600 size-16 bg-blue-100 shadow-xl rounded-full flex justify-center items-center">
             <svg class="w-6.75 h-7.5">
                 <use href="#icon-phone"></use>
             </svg>
@@ -31,5 +32,6 @@
                 <span class="burger__icon"></span>
             </span>
         </button>
+        </div>
     </div>
 </header>
