--- a/src/partials/banner.html
+++ b/src/partials/banner.html
@@ -23,7 +23,7 @@
                     src="./assets/img/banner-1.png" alt="banner-1">
             </div>
         </div> 
-         <div class="swiper-slide">
+        <div class="swiper-slide">
             <div
                 class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
                 <div class="md:max-w-60 xl:max-w-143 md:ml-22.5 xl:ml-0 md:-mt-108.25 xl:-mt-5">
@@ -42,9 +42,9 @@
                             клиентов</span>
                     </div>
                 </div>
+                <img class="md:border-17 xl:border-38 border-blue-100 rounded-full shadow-lg md:size-77.5 xl:size-175 absolute md:top-11.5 xl:top-14.75 md:-right-2.75 xl:-right-58.25"
+                    src="./assets/img/banner-2.png" alt="banner-2">
             </div>
-            <img class="md:border-17 xl:border-38 border-blue-100 rounded-full shadow-lg md:size-77.5 xl:size-175 absolute md:top-11.5 xl:top-14.5 md:right-2 xl:right-14.25"
-                src="./assets/img/banner-2.png" alt="banner-2">
         </div> 
         <div class="swiper-slide">
             <div
